fix annoying gap

--- a/src/Content/newMobilePaneIosFrame.css
+++ b/src/Content/newMobilePaneIosFrame.css
@@ -74,6 +74,10 @@ body {
     white-space: normal;
 }
 
+.tab .block-title:first-child {
+    margin-top: 0px;
+}
+
 .block {
     word-wrap: break-word;
 }
